# terminus

./: CMakeLists.txt  ChangeLog  HISTORY.md  LICENSE  PKGBUILD  README.md  meson.build  meson_options.txt  terminus.avprj  terminus_0.10.0.orig.tar.gz.delta  terminus_0.10.0.orig.tar.gz.id  terminus_0.11.0.orig.tar.gz.delta  terminus_0.11.0.orig.tar.gz.id  terminus_0.4.0.orig.tar.gz.delta  terminus_0.4.0.orig.tar.gz.id  terminus_0.5.0.orig.tar.gz.delta  terminus_0.5.0.orig.tar.gz.id  terminus_0.6.0.orig.tar.gz.delta  terminus_0.6.0.orig.tar.gz.id  terminus_0.7.0.orig.tar.gz.delta  terminus_0.7.0.orig.tar.gz.id  terminus_0.8.0.orig.tar.gz.delta  terminus_0.8.0.orig.tar.gz.id  terminus_0.8.1.orig.tar.gz.delta  terminus_0.8.1.orig.tar.gz.id  terminus_0.9.0.orig.tar.gz.delta  terminus_0.9.0.orig.tar.gz.id  terminus_0.9.1.orig.tar.gz.delta  terminus_0.9.1.orig.tar.gz.id  terminus_1.0.0.orig.tar.gz.delta  terminus_1.0.0.orig.tar.gz.id  terminus_1.1.0.orig.tar.gz.delta  terminus_1.1.0.orig.tar.gz.id  terminus_1.11.0.orig.tar.xz.delta  terminus_1.11.0.orig.tar.xz.id  terminus_1.12.0.orig.tar.xz.delta  terminus_1.12.0.orig.tar.xz.id  terminus_1.13.0.orig.tar.xz.delta  terminus_1.13.0.orig.tar.xz.id  terminus_1.14.0.orig.tar.xz.delta  (+48 more)
data/: CMakeLists.txt  com.rastersoft.terminus.desktop  extras.gresource.xml  org.rastersoft.terminus.gschema.xml  terminus.desktop  terminus_autorun.desktop
data/interface/: properties.ui
debian/: .gitignore  changelog  control  copyright  postinst  prerm  rules  terminus.1  terminus.alternatives  terminus.changelog  terminus.manpages  watch
debian/patches/: 0001-indent-usage-options.patch  0002-Fix-TERM-environment-variable.patch  0003-Use-the-user-shell-by-default.patch  auto-gitignore  cmake-4.patch  gnome-shell-43.patch  metadata-Mark-compatible-with-newer-GNOME-Shell.patch  series
debian/upstream/: metadata
meson_scripts/: install_schemas.sh
po/: POTFILES.in  es.po  terminus.pot
rpmbuild/SPECS/: terminus.spec
src/: CMakeLists.txt  PanedPercentage.vala  base.vala  bindkeys.vala  checkwayland.c  checkwayland.h  checkwayland.vapi  container.vala  css.vala  definitions.vala  dndManager.vala  keybinding.vala  macros.vala  meson.build  notetab.vala  palete.vala  params.vala  processes.vala  settings.vala  terminal.vala  terminus.vala  window.vala
src/vapidir/: keybinder-3.0.vapi
terminus_gnome_shell/: CMakeLists.txt  extension.js  metadata.json
terminus_gnome_shell45/: CMakeLists.txt  extension.js  metadata.json
